[gd_scene load_steps=2 format=3 uid="uid://6v3dlhympijt"]

[ext_resource type="Script" path="res://UI/Menus/Main Menu/MainMenu.gd" id="1_ckh88"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckh88")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.367
anchor_right = 0.68
anchor_bottom = 0.623
offset_left = 0.359985
offset_top = 0.18399
offset_right = -0.359985
offset_bottom = 0.29599
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Aether: Emergent Dialogue and Quest Generation"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "Play"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "Setting"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
